# Tryboy869_package-monetization-automation

./: CONTRIBUTING.md  LICENSE  README.md  action.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/: analytics-guide.md  integration-guide.md  setup-guide.md
examples/go-module/: go.mod  monetized.go
examples/npm-package/: index.js  package.json
examples/python-package/: pyproject.toml
examples/python-package/monetized_package/: __init__.py
scripts/: setup.sh
